@@ -76,6 +76,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #13193: Fix distutils.filelist.FileList under Windows.  The
+  "recursive-include" directive now recognizes both legal path separators.
+
 - Issue #13373: multiprocessing.Queue.get() could sometimes block indefinitely
   when called with a timeout.  Patch by Arnaud Ysmal.
 
